# C_plus_plus_II

./: .gitignore
Exercise/ex1/: CMakeLists.txt
Exercise/ex5/: main.cpp
Project/: .gitignore  README.md
Project/EyeTracking/: CMakeLists.txt
Project/EyeTracking/src/app/acquisition/: USBcamera.cpp  USBcamera.h  VCamera.cpp  VCamera.h  basecamera.h  basecamerafactory.h  camera.cpp  camera.h  icamera.h
Project/EyeTracking/src/app/common/: control.cpp  control.h  control_cb.h  dataBuffer.cpp  eyeAnalyser.cpp  eyeAnalyser.h  eyeDetector.cpp  eyeDetector.h  icontrol.h
Project/EyeTracking/src/app/visualisation/: videoVisualizer.h
Project/EyeTracking/src/ui/: actionwidget.cpp  actionwidget.h  actionwidget.ui  calibrationwidget.cpp  calibrationwidget.h  calibrationwidget.ui  icalibrationwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h  widget.ui
Project_Pincinato/EyeTracking/: BFH.stylesheet  CMakeLists.txt
Project_Pincinato/EyeTracking/src/: main.cpp
Project_Pincinato/EyeTracking/src/app/acquisition/: USBcamera.h  VCamera.h  basecamera.h  basecamerafactory.h  camera.cpp  camera.h  icamera.h
Project_Pincinato/EyeTracking/src/app/common/: control.cpp  control.h  dataBuffer.cpp  dataBuffer.h  dataBufferPool.h  eyeDetector.cpp  eyeDetector.h  eyeanalyser.cpp  eyeanalyser.h  icontrol.h
Project_Pincinato/EyeTracking/src/app/visualisation/: videoVisualizer.cpp  videoVisualizer.h
Project_Pincinato/EyeTracking/src/ui/: actionwidget.cpp  actionwidget.h  actionwidget.ui  calibrationwidget.cpp  calibrationwidget.h  calibrationwidget.ui  icalibrationwidget.h  iwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h  widget.ui
Project_Pincinato/build-EyeTracking-Desktop_Qt_5_10_0_MinGW_32bit-Debug/: CMakeCache.txt  EyeTracking.cbp  Makefile  cmake_install.cmake
Project_Pincinato/build-EyeTracking-Desktop_Qt_5_10_0_MinGW_32bit-Debug/PCP_automoc.dir/: moc_actionwidget_YGJIWX2KPRLBYN.cpp  moc_calibrationwid_PCCIFWUGI3RV5G.cpp  moc_mainwindow_LQHKWQ4N6L2ZOQ.cpp  moc_rOg_image_L4Z25VNYTV32PG.cpp  moc_widget_LD5AFFWRDBITAG.cpp
Project_Pincinato/build-EyeTracking-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  EyeTracking.cbp  Makefile  PCP_automoc.cpp  cmake_install.cmake  ui_calibrationwidget.h  ui_mainwindow.h  ui_widget.h
designpattern-master/designpattern-master/build-producerConsumerPattern-Desktop_Qt_5_10_0_MinGW_32bit-Debug/: CMakeCache.txt  Makefile  PCP.cbp  PCP_automoc.cpp  cmake_install.cmake  ui_actionwidget.h  ui_calibrationwidget.h  ui_widget.h
designpattern-master/designpattern-master/build-producerConsumerPattern-Desktop_Qt_5_10_0_MinGW_32bit-Debug/PCP_automoc.dir/: moc_actionwidget_YGJIWX2KPRLBYN.cpp  moc_calibrationwid_PCCIFWUGI3RV5G.cpp  moc_mainwindow_LQHKWQ4N6L2ZOQ.cpp  moc_widget_LD5AFFWRDBITAG.cpp
designpattern-master/designpattern-master/build-producerConsumerPattern-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Makefile  PCP.cbp  cmake_install.cmake
designpattern-master/designpattern-master/build-producerConsumerPattern-Desktop_Qt_5_10_0_MinGW_32bit-Release/: CMakeCache.txt  Makefile  PCP.cbp  cmake_install.cmake
designpattern-master/designpattern-master/producerConsumerPattern/: CMakeLists.txt
designpattern-master/designpattern-master/producerConsumerPattern/src/: main.cpp
designpattern-master/designpattern-master/producerConsumerPattern/src/app/acquisition/: USBcamera.cpp  USBcamera.h  VCamera.cpp  VCamera.h  basecamera.h  basecamerafactory.h  camera.cpp  camera.h
designpattern-master/designpattern-master/producerConsumerPattern/src/app/common/: control.cpp  control.h  dataBuffer.cpp  dataBuffer.h  eyeDetector.cpp  eye_detector.cpp  eye_detector.h  eyeanalyser.cpp  eyeanalyser.h  icontrol.h
designpattern-master/designpattern-master/producerConsumerPattern/src/app/visualisation/: videoVisualizer.cpp  videoVisualizer.h
designpattern-master/designpattern-master/producerConsumerPattern/src/ui/: actionwidget.cpp  actionwidget.h  actionwidget.ui  calibrationwidget.cpp  calibrationwidget.h  calibrationwidget.ui  icalibrationwidget.h  mainwindow.cpp  mainwindow.h  widget.cpp  widget.h  widget.ui
qt/: Idea-Project.txt
qt/CmakeTemplate_Widget/: CMakeLists.txt
qt/Ex01/: CMakeLists.txt  main.cpp
qt/Ex02/: CMakeLists.txt  billionaire.h  main.cpp
qt/Ex04/: CMakeLists.txt
qt/Ex04/src/: main.cpp  threadlogfile.h  threadlogfilesafe.h
qt/Ex3/: CMakeLists.txt
qt/Ex3/src/: main.cpp
qt/Ex3/src/ui/: widget.cpp  widget.h  widget.ui  widget_ex3_4.cpp  widget_ex3_4.h  widget_ex3_4.ui
qt/Ex3/src/ui/qcustomplot-source/: qcustomplot.cpp
qt/Exercicse_ThreadIII/: CMakeLists.txt  main.cpp
qt/Project/: CMakeLists.txt
qt/Project/src/: main.cpp
qt/Project/src/app/acquisition/: camera.cpp  camera.h  icamera.h
qt/Project/src/app/common/: eye_detector.cpp  eye_detector.h  ieye_detector.h
qt/Project/src/ui/: configwindow.h  configwindow.ui  widget.cpp  widget.h  widget.ui
qt/Project/src/ui/qcustomplot-source/: qcustomplot.cpp  qcustomplot.h
qt/ex05/: CMakeLists.txt  dataqueue.h  main.cpp
qt/ex06/designpattern-master/designpattern-master/: README.md
qt/ex06/designpattern-master/designpattern-master/build-producerConsumerPattern-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Makefile  PCP.cbp  PCP_automoc.cpp  cmake_install.cmake  ui_widget.h
qt/ex06/designpattern-master/designpattern-master/producerConsumerPattern/: CMakeLists.txt
qt/ex06/designpattern-master/designpattern-master/producerConsumerPattern/src/: main.cpp
qt/ex06/designpattern-master/designpattern-master/producerConsumerPattern/src/app/acquisition/: VCamera.cpp  VCamera.h  basecamerafactory.h  icamera.h  vrgbcamera.cpp  vrgbcamera.h
qt/ex06/designpattern-master/designpattern-master/producerConsumerPattern/src/app/common/: control.cpp  control.h  icontrol.h
qt/ex07/designpattern-master/designpattern-master/build-producerConsumerPattern-Desktop_Qt_5_10_0_MinGW_32bit-Default/: CMakeCache.txt  Makefile  PCP.cbp  cmake_install.cmake
(+9 files in other folders)
